--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
   <meta 
   name="Portfolio - Mateusz Karpiński"
   content="Welocem on my portofolio website. I'm Frontend Developer with skills on SEO and User Experience Designe ">
-  <title>Document</title>
+  <title>Portfolio - Mateusz Karpiński</title>
 </head>
 <body>
-  
+  <div id="root"></div>
 </body>
 </html>
