--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   name="Portfolio - Mateusz Karpiński"
   content="Welocem on my portofolio website. I'm Frontend Developer with skills on SEO and User Experience Designe ">
   <title>Portfolio - Mateusz Karpiński</title>
+  <link rel="stylesheet" href="../src/index.css">
 </head>
 <body>
   <div id="root"></div>
