--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,17 @@
   content="Welocem on my portofolio website. I'm Frontend Developer with skills on SEO and User Experience Designe ">
   <title>Portfolio - Mateusz Karpiński</title>
   <link rel="stylesheet" href="../src/index.css">
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LTML0555H7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LTML0555H7');
+  
+</script>
 </head>
 <body>
   <div id="root"></div>
